--- a/assets/main-effects.css
+++ b/assets/main-effects.css
@@ -1,4 +1,4 @@
-.reminder-bell {
+.sechat-shaking {
   -webkit-animation: ring 4s 0.7s ease-in-out infinite;
   -webkit-transform-origin: 50% 4px;
   -moz-animation: ring 4s 0.7s ease-in-out infinite;
