--- a/assets/main.css
+++ b/assets/main.css
@@ -42,3 +42,24 @@
 }
 
 /* Scroll Bar End */
+
+/* Video Start */
+
+.sechat-video-player {
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.sechat-control-container {
+  background-color: rgb(179, 102, 249, 0.9);
+  padding: 20px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+/* Video End */
