--- a/assets/main.css
+++ b/assets/main.css
@@ -84,13 +84,17 @@
   border-radius: 0.5rem;
   font-size: 1rem;
   overflow: auto;
-  max-height: 10dvh;
   margin-bottom: 0;
   padding: 0.5rem;
-  min-height: 60px;
-  max-height: 60px;
+  min-height: 100px;
+  max-height: 50dvh;
 }
 
 .ProseMirror:focus {
   outline: none;
+}
+
+.link-preview-img {
+  max-height: 100px;
+  width: auto;
 }
