--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url("./fonts/Ubuntu-Regular.ttf") format("truetype");
+}
+
 .sechat-link-clear {
   text-decoration: none;
   color: inherit;
