--- a/assets/main.css
+++ b/assets/main.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("./fonts/Ubuntu-Regular.ttf") format("truetype");
+  src: url("./fonts/Ubuntu-Light.ttf") format("truetype");
 }
 
 .sechat-link-clear {
