--- a/assets/main.css
+++ b/assets/main.css
@@ -126,9 +126,10 @@
 } */
 
 .link-preview-img {
-  max-width: 90dvw;
+  max-width: 85dvw;
 }
 
 .image-overlay-preview {
-  max-width: 95dvw;
+  max-height: 98dvh;
+  max-width: 98dvw;
 }
